--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"embla-carousel-autoplay": "^8.1.3",
+		"embla-carousel-svelte": "^8.1.3"
+	}
 }
